--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Number Merge Game</title>
+    <p style="font-size: 29.5; color: gray;">Number Marge!</p>
     <style>
         body {
             display: flex;
